@@ -1,20 +1,19 @@
 # FdashCard
 
-FdashCard is a JavaFX desktop flashcard application.  
-It allows users to create flashcard sets, add cards, and study them through a simple user interface.
+FdashCard is a JavaFX desktop flashcard application built with Java, FXML, JDBC, and Microsoft SQL Server.
 
-This project was built for learning Java, JavaFX, FXML, JDBC, and SQL Server integration.
+It allows users to create flashcard sets, add cards, study them, and edit existing cards through a simple desktop interface.
 
 ---
 
 ## Features
 
 - Create flashcard sets
-- Add flashcards to a set
-- View and study cards
-- Delete card sets
-- JavaFX UI with FXML and CSS
-- SQL Server database connection using JDBC
+- Add cards to a set
+- Study flashcards
+- Edit existing cards
+- JavaFX user interface
+- SQL Server database integration
 
 ---
 
@@ -37,11 +36,12 @@ FdashCard/
 │   ├── application/
 │   ├── Controller/
 │   ├── model/
+│   ├── utils/
 │   ├── resources/
-│   └── utils/
+│   └── db.properties
 ├── bin/
-├── FlashCard.jar
-└── README.md
+├── README.md
+└── sqljdbc4.jar
 ```
 
 ---
@@ -53,49 +53,46 @@ Before running this project, make sure you have:
 - Java JDK installed
 - JavaFX SDK installed
 - Microsoft SQL Server installed
-- SQL Server JDBC Driver available in the project
+- SQL Server JDBC Driver
 - A database named `FdashCard`
 
-### Optional but recommended
+### Recommended
 - SQL Server Management Studio (SSMS)
 
-SSMS is not required to run the application, but it is recommended because it makes it easier to create the database and import SQL scripts.
+SSMS is optional, but it makes database setup easier.
 
 ---
 
-## Database Requirement
+## Database Setup
 
 This project uses **Microsoft SQL Server**.
 
-The application connects using JDBC in `DbUtils.java`:
+### 1. Create the database
 
-```java
-String url = "jdbc:sqlserver://localhost:1433;databaseName=FdashCard";
+```sql
+CREATE DATABASE FdashCard;
+GO
 ```
 
-So the user must have:
+### 2. Run your table creation script
+After creating the database, run your `CREATE TABLE` statements and optional sample data scripts.
 
-- SQL Server running on `localhost`
-- port `1433` enabled
-- a database named `FdashCard`
-- the required tables already created
-- valid SQL Server username and password
+### 3. Configure database connection
+Create a file named `db.properties` inside `src/`:
 
-Current database configuration in the project:
-
-```java
-private static final String DB_NAME = "FdashCard";
-private static final String DB_USER_NAME = "SA";
-private static final String DB_PASSWORD = "12345";
+```properties
+db.url=jdbc:sqlserver://localhost:1433;databaseName=FdashCard;encrypt=true;trustServerCertificate=true
+db.user=SA
+db.password=12345
 ```
 
-> Note: If you publish this repository publicly, you should not keep real credentials in the source code.
+> Do not upload your real `db.properties` to public GitHub.
 
 ---
 
-## Important Note About the Database Script
+## Important Note
 
-The full SQL script generated from SQL Server may contain machine-specific file paths like this:
+The full SQL Server script generated from SSMS may include machine-specific file paths like:
 
 ```sql
 FILENAME = N'C:\Program Files\Microsoft SQL Server\MSSQL15.SQLSERVER\MSSQL\DATA\FdashCard.mdf'
@@ -103,62 +100,60 @@ FILENAME = N'C:\Program Files\Microsoft SQL Server\MSSQL15.SQLSERVER\MSSQL\DATA\
 
 Those paths may not work on another computer.
 
-For GitHub, it is better to provide a simpler SQL setup script, for example:
+For GitHub, it is better to share:
+- a simple `CREATE DATABASE` script
+- table creation scripts
+- optional sample data scripts
 
-```sql
-CREATE DATABASE FdashCard;
-GO
+---
 
-USE FdashCard;
-GO
+## Running the Project from Source
+
+### Compile
+
+```powershell
+New-Item -ItemType Directory -Force bin
+$files = Get-ChildItem -Recurse -Path .\src -Filter *.java | ForEach-Object { $_.FullName }
+javac --module-path "C:\java-fx_25\lib" --add-modules javafx.controls,javafx.fxml -cp ".;.\sqljdbc4.jar" -d bin $files
 ```
 
-Then add your `CREATE TABLE` statements after that.
+### Copy resources
 
----
+```powershell
+New-Item -ItemType Directory -Force .\bin\application
+Copy-Item .\src\application\*.fxml .\bin\application\ -Force
+Copy-Item .\src\application\*.css .\bin\application\ -Force
+Copy-Item .\src\db.properties .\bin\db.properties -Force
+Copy-Item .\src\resources -Destination .\bin\resources -Recurse -Force
+```
 
-## Suggested Database Files for This Repo
+### Run
 
-It is recommended to include a folder like this:
-
-```text
-database/
-├── create_database.sql
-├── create_tables.sql
-└── sample_data.sql
+```powershell
+java --module-path "C:\java-fx_25\lib" --add-modules javafx.controls,javafx.fxml -cp ".;bin;.\sqljdbc4.jar" application.Main
 ```
 
 ---
 
-## Example Database Setup
+## Running in Eclipse
 
-A user can set up the database with these steps:
+1. Import the project into Eclipse
+2. Make sure `src` is marked as a source folder
+3. Add JavaFX libraries
+4. Add the SQL Server JDBC driver
+5. Make sure `db.properties` exists in `src`
+6. Run `application.Main`
 
-1. Install Microsoft SQL Server
-2. Open SSMS or another SQL client
-3. Create a database named `FdashCard`
-4. Run the SQL scripts in the `database/` folder
-5. Update `DB_USER_NAME` and `DB_PASSWORD` in `DbUtils.java` if needed
-6. Run the Java application
-
----
-
-## How to Run
-
-### Run from source
-Make sure JavaFX is configured in your IDE and SQL Server is running.
-
-### Run JAR
-Example:
+### VM Arguments for JavaFX
 
 ```bash
-java --module-path "C:\path\to\javafx\lib" --add-modules javafx.controls,javafx.fxml -jar FlashCard.jar
+--module-path "C:\java-fx_25\lib" --add-modules javafx.controls,javafx.fxml
 ```
 
-For Linux/macOS:
+Optional:
 
 ```bash
-java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml -jar FlashCard.jar
+--module-path "C:\java-fx_25\lib" --add-modules javafx.controls,javafx.fxml --enable-native-access=javafx.graphics
 ```
 
 ---
@@ -167,22 +162,41 @@ java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml
 
 - This is a desktop application, not a web application
 - The JDBC URL is a database connection string, not a website URL
-- Users cannot run the project successfully unless the SQL Server database is set up correctly
-- SQL Server Management Studio is optional, but SQL Server itself is required unless the database is hosted elsewhere
+- SQL Server must be installed and configured before running the app
+- SQL Server Management Studio is optional
+- If resources such as `.fxml`, `.css`, or images are not copied correctly, the app may fail at runtime
+
+---
+
+## Security Note
+
+Do not hardcode real database credentials in source code for a public repository.
+
+Recommended:
+- keep `db.properties` out of Git
+- upload a template file like `db.properties.example`
+
+Example:
+
+```properties
+db.url=jdbc:sqlserver://localhost:1433;databaseName=FdashCard;encrypt=true;trustServerCertificate=true
+db.user=YOUR_USERNAME
+db.password=YOUR_PASSWORD
+```
 
 ---
 
 ## Future Improvements
 
-- Move database credentials out of source code
+- Move sensitive database config fully out of source
 - Add sample SQL scripts to the repository
-- Add update/delete card features
-- Improve error handling
-- Package the project with easier setup instructions
+- Improve validation and error handling
+- Improve empty-state UI for sets with no cards
+- Package the project for easier setup
 
 ---
 
 ## Author
 
-Developed as a learning project for practicing Java, JavaFX, and database connectivity.
+Developed as a JavaFX and SQL Server learning project.
 
